modified:   whatsnew/index.htm

--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -42,7 +42,7 @@
   <h2>August 28, 2023: New version of Tools and Tasks V 5.0.1</h2>
   <ul>
     <li>For testing the ArcPy wrappers for FMEObjects.  I recommend using these in your demo workspace for testing. 
-    <li>Download new tools folder.  Includes Tasks and new Toolbox <a href="http://www.pbcgis.com/tmp/Bos3dModelMgt_ToolsTasks_v5.0.1_20230828.zip.zip">Bos3dModelMgt_ToolsTasks_v5.0.1_20230828.zip</a>
+    <li>Download new tools folder.  Includes Tasks and new Toolbox <a href="http://www.pbcgis.com/tmp/Bos3dModelMgt_ToolsTasks_v5.0.1_20230828.zip">Bos3dModelMgt_ToolsTasks_v5.0.1_20230828.zip</a>
     <li>Unzip and replace tools folder in your ModelMgt_Demo workspace and re-install your tasks.
   </ul>
 
