modified:   whatsnew/index.htm

--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -39,6 +39,19 @@
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">What's New: Recent Updates and New Resources </h1>
 
+<h3>September 9, 2023 New version of Tools and Tasks V 5.0.1</h2>
+  <ul>
+  <li>Continuing improvements on WebScene production tools.  
+  <li>Use in Demo Workspace.
+  <li>Download new Tools folder <a href="http://www.pbcgis.com/tmp/Bos3dModelMgt_ToolsTasks_v5.0.2_20230908.zip">Bos3dModelMgt_ToolsTasks_v5.0.2_20230908.zip</a>
+  <li>Update your demo Tasks.  Check toolbox properties to make sure your Tollbox and Tasks are in sync.  Both should be 5.0.2
+  </ul>
+
+  
+
+Bos3dModelMgt_ToolsTasks_v5.0.2_20230908.zip
+
+
   <h2>August 28, 2023: New version of Tools and Tasks V 5.0.1</h2>
   <ul>
     <li>For testing the ArcPy wrappers for FMEObjects.  I recommend using these in your demo workspace for testing. 
