modified:   data_dictionary/index.htm 	modified:   whatsnew/index.htm

--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -39,7 +39,15 @@
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">What's New: Recent Updates and New Resources </h1>
 
-<h2>September 9, 2023 New version of Tools and Tasks V 5.0.1</h2>
+  <h2>September 26, 2023 Major Update: 6.0</h2>
+  <ul>
+  <li>Schema Change to add Legend Class, A80 Staus, and attributes for Plan, Scenario and Phase
+  <li>New tools and tasks for check for A80 Status Change and various flagging and unflagging proedures for Promotion and Demotion candidates. 
+  <li>New tool and task that compares the prior catalog with the next-edition, producing a summary table that lists the counts of models by status and computes the change.
+  </ul>
+
+
+  <h2>September 9, 2023 New version of Tools and Tasks V 5.0.1</h2>
   <ul>
   <li>Continuing improvements on WebScene production tools.  
   <li>Use in Demo Workspace.
