modified:   whatsnew/index.htm 	submissions/images/3ds-Obj-Export-Options_mtl.snag 	submissions/images/3ds-Obj-Export-Options_mtlBK.PNG

--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -44,6 +44,10 @@
   <li>Schema Change to add Legend Class, A80 Staus, and attributes for Plan, Scenario and Phase
   <li>New tools and tasks for check for A80 Status Change and various flagging and unflagging proedures for Promotion and Demotion candidates. 
   <li>New tool and task that compares the prior catalog with the next-edition, producing a summary table that lists the counts of models by status and computes the change.
+  <li>Download <a href="http://www.pbcgis.com/tmp/ModelMgt_Demo_V6_20230926.zip">ModelMgt_Demo_V6_20230926.zip
+    ModelMgt_20230926
+  <li>Download <a href="http://www.pbcgis.com/tmp/Bos3d_ModelMgt_Prod_20230926.zip">ModelMgt_Demo_V6_20230926.zip
+
   </ul>
 
 
