--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -44,9 +44,9 @@
   <li>Schema Change to add Legend Class, A80 Staus, and attributes for Plan, Scenario and Phase
   <li>New tools and tasks for check for A80 Status Change and various flagging and unflagging proedures for Promotion and Demotion candidates. 
   <li>New tool and task that compares the prior catalog with the next-edition, producing a summary table that lists the counts of models by status and computes the change.
-  <li>Download <a href="http://www.pbcgis.com/tmp/ModelMgt_Demo_V6_20230926.zip">ModelMgt_Demo_V6_20230926.zip</a>
+  <li>Download <a href="http://www.pbcgis.com/tmp/ModelMgt_Demo_V6_20230926.zip">ModelMgt_Demo_V6_20230926.zip</a> A streamlined working demo of all of the tools and tasks covering downtown only.
     ModelMgt_20230926
-  <li>Download <a href="http://www.pbcgis.com/tmp/Bos3d_ModelMgt_Prod_20230926.zip">ModelMgt_Demo_V6_20230926.zip</a>
+  <li>Download <a href="http://www.pbcgis.com/tmp/Bos3d_ModelMgt_Prod_20230926.zip">Bos3d_ModelMgt_Prod_20230926.zip</a> The full production workspace including the 20230813 model collection migrated to V6.
 
   </ul>
 
