--- a/tile_scheme/index.htm
+++ b/tile_scheme/index.htm
@@ -60,39 +60,35 @@
 <h2 id="coordinates">Metro Boston 3D Coordinate System</h2>
 <p>Surveyors and engineers in Massachusetts prepare their official drawings using the Massachusetts State Plane Coordinate System with coordinates expressed in Feet.  The origin of the State Plane grid lies outside the state, which makes coordinate references much larger numbers than most most 3D modeling tools can deal with gracefully.  The creators of AutoCAD, 3DsMax, Rhino, SketchUp and Blender all recommend moving geospatially referenced geometry closer to the origin to avoid problems of precision when creating, transforming or rendering.  
 </p><p>
-To facilitate on-going exchange of 3D models, we have chosen a default offset that places the origin to the South-West of Boston and neighboring cities. We expect modelers to use project-specific coordinate origins.  Preserving the Metro3D insertion point and a tile boundary with models will make it easy to incorporate updates and exchange models with other Metro 3D Boston users whith perfect geo-registration.
+To facilitate on-going exchange of 3D models, we have chosen a default offset that places the origin to the South-West of Boston and neighboring cities. We expect that modelers will use project-specific coordinate origins.  Preserving the Metro3D insertion point and a tile boundary in models will make it easy to make repeat the precise shift precisely geo-located models back and forth between your project and other citySchema collaborators.
 
-<p><b>Projected Coordinate System:</b> State Plane Massachusetts Mainland (Feet),  North American Datum of 1983.
-<br><b>Vertical Coordinate System for 3D data:</b> North American Vertical Datum, 1988 (NAVD 88) Feet (Height)
+<ul>
+<li><b>Projected Coordinate System:</b> State Plane Massachusetts Mainland (Feet),  North American Datum of 1983.
+<li><b>Vertical Coordinate System for 3D data:</b> North American Vertical Datum, 1988 (NAVD 88) Feet (Height)
+<li>To simplify exchange between GIS and design tools, model asset coordinates for are offset. 
+</ul>
+<p>The origin of the Metro 3D Boston coordinate system serves as the insertion point for models.
+ <UL>
+    <LI>Massachusetts State Plane Coordinates (before offsets):</b>
+    <ul> <li><b>X:</b> 731,100 U.S. Feet
+         <li><b>Y:</b> 2,902,900 U.S. Feet
+        <li><b>Elevation:</b> 0 U.S. Feet
+        <li><b>Vertical Datum:</b> North American Vertical Datum 1988 (Height) U.S. Feet.
+    </ul>
+<li><b>Geographic Referencing:</b>
+  <ul><li><b>Longitude:</b> 71.223391 W 
+      <li><b>Latitude:</b> 42.213379 N 
+      <li><b>Earth Model:</b> WGS84
+  </ul>
+<li><b>For display in cartesian or global coordinate systems:</b>
+  <ul><li><b>Rotation to align with True North:</b>  Clockwise 0.34 Degrees. 
+  </ul>
+</ul>
 
-<br><b>Origin / Offset / Insertion Point </B>
-    <br>The origin of the Metro 3D Boston coordinate system serves as the insertion point for models.
-<UL>
- <LI>State Plane Coordinates:</b>
-<ul> <li><b>X:</b>731,100 feet
-     <li><b>Y:</b>2,902,900 feet
-</ul>
-<li><b>Geographic:</b>
-<ul><li><b>Longitude:</b> 71.223391 W 
-<li><b>Latitude:</b> 42.213379 N 
-</ul>
-</ul>
-<p><b>To align Metro 3D Boston grid with True North:</b>  Rotate 0.34 Degrees clockwise. 
+<p><b>OBJ Orientation: </b> Many modeling tools treat the Y axis as vertical.  Geographical coordinate systems use a Z-Up, Y-Forward orientation.  If you experience mis-orientation when importing OBJ format models into your design projects, check the orientation oprions in your importer.  The Z-Up orientation is sometimes obtained by rotating the model -90 degrees arouns the X axis.
+
 <P>To georeference SketchUp tiles for interoperability with SketchUp's geolcoation tools, see the <a href="./sketchup_model.htm#georeference" target="metadata">Notes at the bottom of the SketchUp Models page</a>.  
 
-<h2 id="tips">Tips for Geo-Location and Integrating Updates</h2>
-<p>Maintain geolocation in your models to easily integrate updates from other Metro Boston 3D collaborators. 
-<ul>
-<li>When importing this reference grid into your model be sure to specify units of Feet and check the tile-width (5000 feet) to be sure. 
-<li>Define your model origin, orientation, and scale to suit your project's requirements.  
-<li>Keep the Metro 3D insertion point and tile boundary in your project to assure easy and precise registration of updates from other Metro Boston 3D sources with your project and vice-versa. 
-<li>To import new models from Metro 3D Boston users, snap to the original insertion point.  It may no longer be at 0,0,0, but it is the relative location that counts. 
-<li>To prepare your models for exchange with other Metro Boston 3D collaborators:
-<ol>
-    <li> shift selected geometry with the insertion point back to 0,0,0. Scale and un-rotate, if necessary, to align the upper-right corner of your tile boundary with the reference grid. 
-    <li>Now you can export or import geometry for easy snap-in registration!
-    </ol>
-</ul>
 
 
 
