modified:   whatsnew/index.htm

--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -39,6 +39,16 @@
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">What's New: Recent Updates and New Resources </h1>
 
+  <h2>November 3, 2023 Tools and Tasks Update: 6.1</h2>
+  <ul>
+  <li> Several things have been fixed and improbed, including the broken Create New Model FC tool.
+  <li>Download <a href="http://pbcgis.com/tmp/Bos3d_ToolsTasks_v6.1_20231103.zip">Bos3d_ToolsTasks_v6.1_20231103.zip</a>
+  <li>Back up your old tools folder.  Then put the new tools folder in its place.
+  <li>Import the new Tasks file, <b>Manage_Model_Collection_6.1.esriTasks</b> from the tools/tasks folder.
+  <li>Before resuming work, check the properties of your toolbox to make sure that it is version 6.1.
+  </ul> 
+  
+
   <h2>September 26, 2023 Major Update: 6.0</h2>
   <ul>
   <li>Schema Change to add Legend Class, A80 Staus, and attributes for Plan, Scenario and Phase
