modified:   citytiler/index.htm

--- a/citytiler/index.htm
+++ b/citytiler/index.htm
@@ -49,7 +49,7 @@
       <b>Pre-Release Notice: </b> This documentation and the associated workspace and tools are almost complete.  They require one more run-through before we are sure that they are ready.
     </p>
     <ul>
-      <li><a href="http://www.pbcgis.com/bos3d_downloads/CityTiler_6.0.1_20231130.zip">CityTiler_6.0.1_20231130.zip</a> Pre-Release edition of CityTiler Workspace with all of the tools and tasks. 
+      <li><a href="https://www.pbcgis.com/bos3d_downloads/CityTiler_6.0.2_20231205.zip">CityTiler_6.0.2_20231205.zip</a> Pre-Release edition of CityTiler Workspace with all of the tools and tasks. 
       </ul>
 
   <h2>Tiled framework for cross-platform collaboration</h2>
