modified:   citytiler/index.htm 	modified:   repocat/index.htm

--- a/repocat/index.htm
+++ b/repocat/index.htm
@@ -46,9 +46,15 @@
 
 
 
-    <h3 id="principles">Guided by Sound Asset Management Principles</h3>
-    <p>The design of the Repository Catalog is guided by the <a href="http://www.oais.info/" target="outboard"> International Standards Organization Reference Model for Open Archival Information Systems (OAIS)</a>.  OAIS is a convention for guiding information exchange activities so that the products are accessible and preservable over the long-term. 
+    <h3 id="principles">An Open Archival Information System</h3>
+    <p>The design of the Repository Catalog is guided by the <a href="http://www.oais.info/" target="outboard"> International Standards Organization Reference Model for Open Archival Information Systems (OAIS)</a>.  OAIS is provides patterns for designing information systems that collect and share <b>Information Packages</b> among collaborators who may use a variety of tools. 
     </p>
+    <p>An OAIS Information Package combines digital assets with sufficient descriptive information to make the asset useful for applications.  At a minimum, an AIP includes an asset or a collection of assets along with some human or machine-readable metadata which may include: a Data Dictionary; Coordinate System Information; and Finding Aids, such as tabular indexes or finder maps that assist in identifying individual assets in the collection. 
+    <p>
+    Once information packages have been defined for the inputs: <b>Submission Information Packages (SIP)</b> and for <b>Archival Information Packages (AIP)</b>, you may develop a sustainable culture of inter-disciplinary data sharing that does not grow more complicated as it expands in terms of numbers of assets or numbers of contributors or in temporal or spatial extent.    
+    </p>
+    The citySchema Repository Catalog and its associated tools and workflows produce an archive which is a completely self-contained, user friendly html "web" site that links data assets and catalog information to user-friendly metadata and necessary documentation and clickable map finding aids.  These html pages and PDF files are related through relative path names so that there are no dependencies on external web services.  Therefore, the Repository Catalog operates on a local file-system or through the web, providing web endpoints for each asset.   It will continue to work as long as there are browsers that interpret HTML and Javascript. 
+
     <h3>Built to Leverage City Model Assets in Diverse Applications</h3> 
     The Repository / Catalog is designed make it easy for users to access city model assets.  The catalog repository can be easily be modified as a repository for city models covering other areas.  
     </p>
@@ -57,7 +63,9 @@
    <p>In keeping with the OAIS Reference model, the Repository Catalog is a self-contained package of data and documentation designed to provide systematic access to all of the information necessary for using and preserving a collection of diverse city model assets.
    </p><p>
    Most of the features of the repo/catalog can be discovered through the <a href="https://cityschema.github.io/repository-catalog/catalog/index.htm" target="downloads"> Data Download Page</a></p>.  
-   </p><p>
+   </p>
+   
+   <p>
     <figure class="right">
       <img class="scaled" src="images/ModelFinder.jpg">
       <figcaption>Access Individual Building Models</figcaption>
@@ -66,8 +74,8 @@
   <h3 id="bldg_download">Web-End-points for Individual Building And Bridge Models</h3>
   <p>Collaborators will find it easy to start their own models using the fully integrated tiled SketchUp format models.  However, we have learned that for on-going work, it is desirable to be able to discover and download individual building models that have been changed.  <a href="https://cityschema.github.io/repository-catalog/Bos3d_Tiled_Data/Bos3d_ModelCollection_OBJ/BOS_I_3_ModelCollection_OBJ/ModelCatalog/ModelFinder.htm" target = "downloads">Have a look at the tile-based individual building model Access</a>.
   </p><p>
-  <h3 id="docs">Extensive User Documentation</h3>
-  <p>Power users and collaborators wil need to understand fundamental concepts of the model collection and its coordinate system.  Allof this information is built into the repository / catalog.  <a href="https://cityschema.github.io/repository-catalog/catalog/doc_index.htm" target="documentation">Check out the index to all of the built-in documenation .</a>
+  <h3 id="docs">User Documentation</h3>
+  <p>Power users and collaborators wil need to understand fundamental concepts of the model collection and its coordinate system.  All of this information is built into the repository / catalog.  <a href="https://cityschema.github.io/repository-catalog/catalog/doc_index.htm" target="documentation">Check out the index to all of the built-in documenation .</a>
   
   <p>
   <h3 id="off-line">Turn-Key Web Publishing or An Off-Line Data Store</h3>
