modified:   citytiler/index.htm

--- a/citytiler/index.htm
+++ b/citytiler/index.htm
@@ -84,6 +84,9 @@
 
     <h2 id="repocat">The Demo Repository Catalog and Repocat_Data Folder: </h2> 
     <p>The <a href="../repocat/index.htm">Repository Catalog</a> is a file-system directory that holds all of the tiled data products produced by the cityTiler workflows.  For ease of demonstration and demo version of the repoCat folder is provided in the cityTiler workspace. When using these tools in production you may want to keep the working RepoCat folder outside of this workspace.  
+    <p>Navigate to cityTiler/RepoCat/RepioCat_Data and look at the various folders.  Most of these are folders that are waiting to hold tiled data that wil be created by the various workflows described below.  Noticed that each folder contains a metadata folder with a PDF file inside. This combination of assets and metadata embodies the concept of an Archival Information Package as described on the <a href="../repocat/index.htm">CitySchema Repository Catalog page</a>  
+    <p>Navigate into the cityTiler/RepoCat folder and open the Bos3d_RepoCat.htm file in your favorite browser.  Click the various info-dots related to each of the tiled assets. Notice how these links are fulfilled by the PDF documents saved with each collection of tiled resources.
+    <li>Click on tile I-3 on the clickable tile map.  The blue info-dots here link to the same PDF documents.  The links to tiled data-sets refer to the zip archives in each of the RepoCat_Data folders.  
 
 
   <h2 id="workflows">Product-Oriented Workflows Executed through from CityTiler Workspace</h2>
