modified:   resources/cityschema_includes.js 	modified:   roles/index.htm

--- a/roles/index.htm
+++ b/roles/index.htm
@@ -39,20 +39,20 @@
   <h1 class="title">City Model Stewardship</h1>
   <p>    <p>Before digging into the technical details of <b>How</b> to manage a city-wide collection of 3D models, it will be useful to have a picture of the sorts of people for whom this scheme has been designed, and the personal and institutional <b>motivations</b> that make this effort worthwhile.  
   </p>
-  <h2 id="owners">Roles and Motivations of Intelligent Organizations</h2>
     
-  <h3>The Enterprise Viewpoint: Situational Awareness, Intelligence </h3>
-  <p>An organization willing to support an expensive city-model development and maintenance program must be heavily invested in information-based decision-making. Another word for this sort of motivation and behavior is <b>Intelligence</b>.  Here are some of the activities that might be associated with an intelligent organization.
+  <h2 id="owners">The Enterprise Viewpoint: Situational Awareness </h2>
+  <p>At the highest level, spending time and resources on the development and management of a city model 
+    is probably motivated by  in information
   <ul>
-    <li>Collects observations
-    <li>Makes associations between observations of various situations systems to derive higher-level understanding (intelligence) which supports strategic planning and preparedness. 
-    <li>Develops a culture for learning (information management and development) that involve diverse contributors, and users.
-    <li>Maintains systems for information management that are designed to cultivate and re-use intelligence resources.
+    <li> Understand existing and proposed situations more holistically
+    <li> Improved decision-making / avoidance of unintended consequences
+    <li> Better communication with the public, internally and with collaborators.
+    <li> More efficient and effective workflows for visualization witin the government and with collaborators.
   </ul>
 
 
   <h2 id="users">Roles for Users and Contributors</h2>
-  <p>There are many individuals, communities and institutions that are interested in exploring and contributing to a city-wide 3D  model that reflects current street-scapes; and remembers past and proposed future scenarios.  Many design firms, municipal and campus planning agencies maintain 3D models of their territories and immediate context, but currently, it is rare to see these resources actually shared or systematically combined or preserved as cultural resources for for future reference.  In the case of public agencies, the problem is not a lack of will, but difficulties inherent in the combination of diverse data-sets that may be well-organized individually, but lack the forethought to be easily combined together in a re-useable way. 
+  <p>There are many individuals, communities and institutions that are interested in exploring and contributing to a city-wide 3D  model that reflects current streetscapes; and remembers past and proposed future scenarios. Design firms and municipal and campus planning agencies maintain 3D models of their territories and immediate context, but currently, it is rare to see these resources actually shared or systematically combined or preserved as cultural resources for future reference.  In the case of public agencies, the problem is not a lack of will, but difficulties inherent in the combination of diverse data-sets that may be well-organized individually, but lack the forethought to be easily combined together in a re-useable way. 
   </p><p>
   Municipal and campus planning agencies have the mission and means to collect diverse 3D data -- including the current built scenario and information about development proposals.  While planning agencies may not be as interested as others in representing neighborhoods of the past, a good city model architecture, will make it simple for municipal and campus planning agencies to preserve information about the present -- which will become historical information as the city develops.
   </p><p>
