modified:   resources/cityschema_includes.js 	modified:   whatsnew/index.htm

--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -39,9 +39,34 @@
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">What's New: Recent Updates and New Resources </h1>
 
+<h2>Latest Downloads</h2>
+<h3>CityTiler Demonstration Workspace</h3>
+  <p>The CityTiler workspace includes Tools & Tasks for creating the tile grid and for clipping out terrain data-sets and groundplan images.  This workspace also includes FME tools for creating the tiled SketchUp models, tiled terrain as OBJ and the tiled building collections as OBJ files. This workspace also includes a demonstration version of the Repository Catalog, which is used as the target for all of the tools. 
+  <p>The demonstration workspace includes all of the terrain and context data for the entire area covered by the BosMetro tile grid.   
+  <ul>
+    <li><a href="https://www.pbcgis.com/bos3d_downloads/cityTiler_6.0.2_20231206_r3.zip">Download cityTiler_6.0.2_20231206_r3.zip</a>
+    <li>Read the documentation: <a href="../citytiler/index.htm">Preparing Tiled City Model Resources</a>
+  </ul>
+<h3>Model Collection Management Demonstration Workspace</h3>
+<p>The ModelMgt workspace consists of a file system structure and guided tasks and geoprocessing tools for managing the collection of building, bridge and wall models. The demonstration workspace includes four tiles of data.  It is used for testing all of the workflows and demonstrating that the tools work. 
+  <ul>
+    <li><a href="https://www.pbcgis.com/bos3d_downloads/ModelMgt_Demo_V6_20230926.zip">Download ModelMgt_Demo_V6_20230926.zip</a>
+      <li>Read the documentation: <a href="../mmgt_project/index.htm">Model Collection Management Project and Workspace</a>
+      <li><a href="https://www.pbcgis.com/bos3d_downloads/Bos3d_ToolsTasks_v6.1_20231103.zip">Model Management Tools and Tasks v6.1</a>.  Download this archive and replace the contents of your ModelMgt/tools folder.  Update the project tasks by importing  the saved tasks file <b>tools/Manage_Model_Collection_6.1.esriTasks</b> 
+    </ul>
+
+<hr>
+<h2>Change History</h2>
+
+<h2>December 6, 2023 CityTiler Workspace, Including RepoCat Demo & FME Tiler Tools</h2>
+<ul>
+  <li>The CityTiler workspace includes Tools & Tasks for creating the tile grid and for clipping out terrain data-sets and groundplan images.  This workspace also includes FME tools for creating the tiled SketchUp models, tiled terrain as OBJ and the tiled building collections as OBJ files. This workspace also includes a demonstration version of the Repository Catalog, which is used as the target for all of the tools. 
+  <li><a href="https://www.pbcgis.com/bos3d_downloads/"
+
+
   <h2>November 3, 2023 Tools and Tasks Update: 6.1</h2>
   <ul>
-  <li> Several things have been fixed and improbed, including the broken Create New Model FC tool.
+  <li> Several things have been fixed and improved, including the broken Create New Model FC tool.
   <li>Download <a href="http://pbcgis.com/tmp/Bos3d_ToolsTasks_v6.1_20231103.zip">Bos3d_ToolsTasks_v6.1_20231103.zip</a>
   <li>Back up your old tools folder.  Then put the new tools folder in its place.
   <li>Import the new Tasks file, <b>Manage_Model_Collection_6.1.esriTasks</b> from the tools/tasks folder.
